--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "electron .",
     "build": "vite build && electron-builder",
     "build:release": "node scripts/build-version.js",
-    "postinstall": "echo 'Run electron-rebuild manually if node-pty is needed'"
+    "postinstall": "echo 'Run electron-rebuild manually if node-pty is needed'",
+    "test:console": "node tests/console-test.js"
   },
   "dependencies": {
     "@xterm/addon-fit": "^0.10.0",
@@ -36,6 +37,7 @@
     "png-to-ico": "^3.0.1",
     "sharp": "^0.34.5",
     "to-ico": "^1.1.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
     "vite-plugin-electron": "^0.28.0",
